crates/runtime/tests/snapshots/fn_call__func.snap
---
source: crates/runtime/tests/fn_call.rs
expression: snapshot
---
# Input:
fn f():
  print "test"

f()
f()


# Result (success):
none

# Stdout:
test
test

