crates/runtime/tests/snapshots/fn_call__func_not_enough_args.snap
---
source: crates/vm/tests/fn_call.rs
expression: snapshot
---
# Input:
fn f(a, b, c):
  print a, b, c

f()


# Result (error):
in [[main]]
[31merror[0m in code: missing required positional params: a, b, c


# Stdout:

